--- a/configclient/src/main/resources/bootstrap.properties
+++ b/configclient/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=PageService
 spring.cloud.config.uri=http://localhost:8000/
-spring.cloud.config.profile=production
+spring.cloud.config.profile=dev
 spring.cloud.config.label=
