--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+spring.application.name=SpringCloudConfigServer
 server.port=8000
-spring.application.name=Spring Cloud Config Server
 version=17.10.24
+
 spring.cloud.config.server.git.uri=https://github.com/otter2017/Config
+
+eureka.client.serviceUrl.defaultZone=http://root:1@localhost:80/eureka/
+eureka.client.healthcheck.enable=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=127.0.0.1
