--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -4,7 +4,7 @@ version=17.10.24
 
 spring.cloud.config.server.git.uri=https://github.com/otter2017/Config
 
-eureka.client.serviceUrl.defaultZone=http://root:1@localhost:80/eureka/
+eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost/eureka/
 eureka.client.healthcheck.enable=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
