--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -15,25 +15,33 @@
     <java.version>1.8.0</java.version>
   </properties>
   <dependencyManagement>
-    <dependencies>
+     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix</artifactId>
-            <version>1.3.5.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-dependencies</artifactId>
+           <version>Dalston.RELEASE</version>
+           <type>pom</type>
+           <scope>import</scope>
         </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
-    <dependency>
+     <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+     </dependency>
+     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-    <dependency>
+     </dependency>
+     <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-eureka-server</artifactId>
-    </dependency>
+     </dependency>
+     <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+     </dependency>
   </dependencies>
   <build>
     <finalName>EurekaServer</finalName>
