从EurekaServer发现ConfigServer的服务，并获取配置文件。 不需要再在bootstrap中配置ConfigServer的地址

--- a/configclient/src/main/resources/bootstrap.properties
+++ b/configclient/src/main/resources/bootstrap.properties
@@ -1,4 +1,8 @@
-spring.application.name=PageService
-spring.cloud.config.uri=http://localhost:8000/
+spring.application.name=ConfigClient
+
+#Fetch Config Server from Eureka discovery
+eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost/eureka/
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=SpringCloudConfigServer
 spring.cloud.config.profile=dev
-spring.cloud.config.label=
+server.port=9000
