--- a/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-#default eureka server config
 server.port=80
+
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.server.enable-self-preservation=true
-eureka.client.serviceUrl.defaultZone=http://localhost:80/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost/eureka/
+
 security.basic.enable=true
 security.user.name=root
-security.user.password=1
+security.user.password=eureka
