去掉configServer服务的用户设置，启动后注册到EurekaServer，其他的服务从EurekaServer根据ConfigServer的服务名获取到ConfigServer的地址，再获取其配置文件。
本服务可多开，以实现高可用和负载均衡。

--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -8,3 +8,7 @@ eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost/eureka/
 eureka.client.healthcheck.enable=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=127.0.0.1
+
+security.basic.enable=false
+security.user.name=root
+security.user.password=configserver
