--- a/configclient/src/main/resources/bootstrap.yml
+++ b/configclient/src/main/resources/bootstrap.yml
@@ -1,8 +1,22 @@
-spring.application.name=ConfigClient
+spring:
+  application:
+    name: ConfigClient
 
 #Fetch Config Server from Eureka discovery
-eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost/eureka/
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=SpringCloudConfigServer
-spring.cloud.config.profile=dev
-server.port=9000
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://root:eureka@localhost/eureka/
+      
+spring:
+  cloud:
+    config:
+      profile: dev
+      username: root
+      password: configserver
+      discovery:
+        enabled: true
+        serviceId: SpringCloudConfigServer
+        
+server:
+  port: 8000
