--- a/configclient/src/main/resources/bootstrap.properties
+++ b/configclient/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.application.name=ConfigClient
 
-eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost/eureka/
+eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost:8000/eureka/
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=SpringCloudConfigServer
