--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -1,14 +1,17 @@
 server:
-  port: 80
+  port: 8000
 
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://localhost/eureka/
+      defaultZone: "http://localhost:8000/eureka/"
   server:
     enable-self-preservation: true
+  instance:
+    prefer-ip-address: true
+    ip-address: 127.0.0.1
 
 security:
   basic:
