--- a/zuul/src/main/resources/bootstrap.properties
+++ b/zuul/src/main/resources/bootstrap.properties
@@ -1,10 +1,10 @@
 spring.application.name=Zuul
 
-eureka.client.serviceUrl.defaultZone=http://root:eureka@localhost:8000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
 spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=SpringCloudConfigServer
+spring.cloud.config.discovery.serviceId=ConfigServer
 
 spring.cloud.config.profile=dev
-spring.cloud.config.username=root
-spring.cloud.config.password=configserver
+#spring.cloud.config.username=root
+#spring.cloud.config.password=configserver
