--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -26,10 +26,10 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-     <dependency>
+    <!-- <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
-     </dependency>
+     </dependency> --> 
      <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-eureka-server</artifactId>
