--- a/zuul/src/main/resources/bootstrap.properties
+++ b/zuul/src/main/resources/bootstrap.properties
@@ -1,6 +1,8 @@
 spring.application.name=Zuul
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.27.128:8000/eureka/,http://192.168.27.129:8000/eureka/
+eureka.client.healthcheck.enable=true
+eureka.instance.prefer-ip-address=true
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=ConfigServer
