--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -13,12 +13,11 @@ version: 17.10.24
 eureka:
   client:
     serviceUrl:
-      defaultZone: "http://localhost:8000/eureka/"
+      defaultZone: "http://192.168.27.128:8000/eureka/"
     healthcheck:
       enable: true
   instance:
     prefer-ip-address: true
-    ip-address: 127.0.0.1
 
 #security:
 #  basic:
