--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -7,7 +7,7 @@
   <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>1.5.7.RELEASE</version>
+      <version>1.5.16.RELEASE</version>
 	<relativePath/>
   </parent>
   <properties>
@@ -19,7 +19,7 @@
         <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-dependencies</artifactId>
-           <version>Dalston.RELEASE</version>
+            <version>Edgware.SR4</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
